# mcp-search

./: .env.example  .gitignore  README.md  build.sh  compose.yml
services/mcp-server/: Containerfile  pyproject.toml  run_tests.sh
services/mcp-server/src/mcp-search/: main.py
services/mcp-server/src/mcp-search/clients/: __init__.py  firecrawl.py  searxng.py
services/mcp-server/src/mcp-search/core/: config.py  logging.py
services/mcp-server/src/mcp-search/schemas/: __init__.py  search.py
services/mcp-server/src/mcp-search/server/: __init__.py  tools.py
services/mcp-server/src/mcp_search/: __init__.py  main.py
services/mcp-server/src/mcp_search/clients/: __init__.py  base.py  cache.py  firecrawl.py  redis.py  searxng.py
services/mcp-server/src/mcp_search/core/: __init__.py  exceptions.py
services/mcp-server/src/mcp_search/schemas/: scrape.py
services/mcp-server/src/mcp_search/tools/: __init__.py  registry.py  scrape_urls.py  search_web.py
services/mcp-server/tests/: __init__.py  conftest.py
services/mcp-server/tests/integration/: __init__.py  test_client_integration.py
services/mcp-server/tests/unit/: __init__.py
services/mcp-server/tests/unit/clients/: __init__.py  test_base.py  test_base_client.py  test_firecrawl.py  test_redis.py  test_searxng.py
services/mcp-server/tests/unit/core/: __init__.py  test_config.py  test_exceptions.py
services/mcp-server/tests/unit/schemas/: __init__.py  test_scrape.py  test_search.py
services/mcp-server/tests/unit/server/: __init__.py  test_tools.py
services/mcp-server/tests/utils/: __init__.py  helpers.py  mocks.py
(+22 files in other folders)
